@@ -12,6 +12,7 @@
  */
 package org.assertj.core.internal.maps;
 
+import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonMap;
 import static java.util.Collections.unmodifiableMap;
@@ -25,9 +26,9 @@ import static org.assertj.core.internal.ErrorMessages.keysToLookForIsEmpty;
 import static org.assertj.core.internal.ErrorMessages.keysToLookForIsNull;
 import static org.assertj.core.test.Maps.mapOf;
 import static org.assertj.core.test.TestData.someInfo;
-import static org.assertj.core.util.Arrays.array;
 import static org.assertj.core.util.AssertionsUtil.expectAssertionError;
 import static org.assertj.core.util.FailureMessages.actualIsNull;
+import static org.assertj.core.util.Lists.list;
 import static org.assertj.core.util.Sets.set;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
@@ -48,14 +49,14 @@ import org.junit.jupiter.params.provider.MethodSource;
 import com.google.common.collect.ImmutableMap;
 
 /**
- * @author William Delanoue
+ * @author Ilya Koshaleu
  */
-class Maps_assertContainsKeys_Test extends MapsBaseTest {
+class Maps_assertContainsKeys_with_Iterable_Test extends MapsBaseTest {
 
   @Test
   void should_fail_if_actual_is_null() {
     // GIVEN
-    String[] keys = { "name" };
+    Iterable<String> keys = list("name");
     // WHEN
     AssertionError assertionError = expectAssertionError(() -> maps.assertContainsKeys(someInfo(), null, keys));
     // THEN
@@ -63,23 +64,23 @@ class Maps_assertContainsKeys_Test extends MapsBaseTest {
   }
 
   @Test
-  void should_fail_if_given_keys_array_is_null() {
+  void should_fail_if_given_keys_iterable_is_null() {
     // GIVEN
-    String[] keys = null;
+    Iterable<String> keys = null;
     // WHEN
     Throwable thrown = catchThrowable(() -> maps.assertContainsKeys(someInfo(), actual, keys));
     // THEN
-    then(thrown).isInstanceOf(NullPointerException.class).hasMessage(keysToLookForIsNull("array of keys"));
+    then(thrown).isInstanceOf(NullPointerException.class).hasMessage(keysToLookForIsNull("keys iterable"));
   }
 
   @Test
-  void should_fail_if_given_keys_array_is_empty() {
+  void should_fail_if_given_keys_iterable_is_empty() {
     // GIVEN
-    String[] keys = emptyKeys();
+    Iterable<String> keys = emptyList();
     // WHEN
     Throwable thrown = catchThrowable(() -> maps.assertContainsKeys(someInfo(), actual, keys));
     // THEN
-    then(thrown).isInstanceOf(IllegalArgumentException.class).hasMessage(keysToLookForIsEmpty("array of keys"));
+    then(thrown).isInstanceOf(IllegalArgumentException.class).hasMessage(keysToLookForIsEmpty("keys iterable"));
   }
 
   @ParameterizedTest
@@ -88,44 +89,44 @@ class Maps_assertContainsKeys_Test extends MapsBaseTest {
       "modifiableMapsSuccessfulTestCases",
       "caseInsensitiveMapsSuccessfulTestCases",
   })
-  void should_pass(Map<String, String> actual, String[] expected) {
+  void should_pass(Map<String, String> actual, Iterable<String> expected) {
     // WHEN/THEN
     assertThatNoException().as(actual.getClass().getName())
                            .isThrownBy(() -> maps.assertContainsKeys(info, actual, expected));
   }
 
   private static Stream<Arguments> unmodifiableMapsSuccessfulTestCases() {
-    return Stream.of(arguments(emptyMap(), emptyKeys()),
-                     arguments(singletonMap("name", "Yoda"), array("name")),
-                     arguments(new SingletonMap<>("name", "Yoda"), array("name")),
-                     arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), array("name", "job")),
-                     arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), array("job", "name")),
-                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("name", "job")),
-                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("job", "name")),
-                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), array("name", "job")),
-                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), array("job", "name")));
+    return Stream.of(arguments(emptyMap(), emptyList()),
+                     arguments(singletonMap("name", "Yoda"), list("name")),
+                     arguments(new SingletonMap<>("name", "Yoda"), list("name")),
+                     arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), list("name", "job")),
+                     arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), list("job", "name")),
+                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), list("name", "job")),
+                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), list("job", "name")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), list("name", "job")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), list("job", "name")));
   }
 
   private static Stream<Arguments> modifiableMapsSuccessfulTestCases() {
     return Stream.of(MODIFIABLE_MAPS)
                  .flatMap(supplier -> Stream.of(arguments(mapOf(supplier, entry("name", "Yoda"), entry("job", "Jedi")),
-                                                          array("name")),
+                                                          list("name")),
                                                 arguments(mapOf(supplier, entry("name", "Yoda"), entry("job", "Jedi")),
-                                                          array("name", "job")),
+                                                          list("name", "job")),
                                                 arguments(mapOf(supplier, entry("name", "Yoda"), entry("job", "Jedi")),
-                                                          array("job", "name"))));
+                                                          list("job", "name"))));
   }
 
   private static Stream<Arguments> caseInsensitiveMapsSuccessfulTestCases() {
     return Stream.of(ArrayUtils.add(CASE_INSENSITIVE_MAPS, CaseInsensitiveMap::new))
                  .flatMap(supplier -> Stream.of(arguments(mapOf(supplier, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                                                          array("name", "job")),
+                                                          list("name", "job")),
                                                 arguments(mapOf(supplier, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                                                          array("job", "name")),
+                                                          list("job", "name")),
                                                 arguments(mapOf(supplier, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                                                          array("Name", "Job")),
+                                                          list("Name", "Job")),
                                                 arguments(mapOf(supplier, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                                                          array("Job", "Name"))));
+                                                          list("Job", "Name"))));
   }
 
   @ParameterizedTest
@@ -135,7 +136,7 @@ class Maps_assertContainsKeys_Test extends MapsBaseTest {
       "caseInsensitiveMapsFailureTestCases",
       "commonsCollectionsCaseInsensitiveMapFailureTestCases",
   })
-  void should_fail(Map<String, String> actual, String[] expected, Set<String> notFound) {
+  void should_fail(Map<String, String> actual, Iterable<String> expected, Set<String> notFound) {
     // WHEN
     assertThatExceptionOfType(AssertionError.class).as(actual.getClass().getName())
                                                    .isThrownBy(() -> maps.assertContainsKeys(info, actual, expected))
@@ -145,55 +146,54 @@ class Maps_assertContainsKeys_Test extends MapsBaseTest {
 
   private static Stream<Arguments> unmodifiableMapsFailureTestCases() {
     return Stream.of(arguments(emptyMap(),
-                               array("name"),
+                               list("name"),
                                set("name")),
                      arguments(singletonMap("name", "Yoda"),
-                               array("color"),
+                               list("color"),
                                set("color")),
                      arguments(new SingletonMap<>("name", "Yoda"),
-                               array("color"),
+                               list("color"),
                                set("color")),
                      arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))),
-                               array("name", "color"),
+                               list("name", "color"),
                                set("color")),
                      arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"),
-                               array("name", "color"),
+                               list("name", "color"),
                                set("color")),
                      arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"),
-                               array("name", "color"),
+                               list("name", "color"),
                                set("color")),
                      arguments(Jdk11.Map.of("name", "Yoda"),
-                               array((String) null), // implementation not permitting null keys
+                               list((String) null), // implementation not permitting null keys
                                set((String) null)));
   }
 
   private static Stream<Arguments> modifiableMapsFailureTestCases() {
     return Stream.of(MODIFIABLE_MAPS)
                  .flatMap(supplier -> Stream.of(arguments(mapOf(supplier, entry("name", "Yoda")),
-                                                          array("name", "color"),
+                                                          list("name", "color"),
                                                           set("color")),
                                                 arguments(mapOf(supplier, entry("name", "Yoda"), entry("job", "Jedi")),
-                                                          array("name", "color"),
+                                                          list("name", "color"),
                                                           set("color"))));
   }
 
   private static Stream<Arguments> caseInsensitiveMapsFailureTestCases() {
     return Stream.of(CASE_INSENSITIVE_MAPS)
                  .flatMap(supplier -> Stream.of(arguments(mapOf(supplier, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                                                          array("name", "color"),
+                                                          list("name", "color"),
                                                           set("color")),
                                                 arguments(mapOf(supplier, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                                                          array("Name", "Color"),
+                                                          list("Name", "Color"),
                                                           set("Color"))));
   }
 
   private static Stream<Arguments> commonsCollectionsCaseInsensitiveMapFailureTestCases() {
     return Stream.of(arguments(mapOf(CaseInsensitiveMap::new, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                               array("name", "color"),
+                               list("name", "color"),
                                set("color")), // internal keys are always lowercase
                      arguments(mapOf(CaseInsensitiveMap::new, entry("NAME", "Yoda"), entry("Job", "Jedi")),
-                               array("Name", "Color"),
+                               list("Name", "Color"),
                                set("Color"))); // internal keys are always lowercase
   }
-
 }
